fix: nav bar alignment ajusted

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,86 +20,101 @@ body {
     position: sticky;
     top: 0;
 
-    .nav {
-      a {
-        color: #fff;
-        font-size: 1.2rem;
-        font-weight: 600;
-        display: block;
+    .nav-bar {
+      padding-top: 4px;
+      padding-bottom: 4px;
+      margin: 0;
+
+      > div {
+        margin-left: 5rem;
+        margin-right: 5rem;
       }
 
-      a:hover,
-      a:visited {
-        color: #fff;
-      }
-
-      .dropdown-menu {
-        background-color: $primary3;
-        width: 280px;
-
-        li {
+      .nav {
+        a {
           color: #fff;
-
-          a {
-            display: block;
-            margin: auto;
-            width: 80%;
-            padding: 10px;
-            font-size: 0.9em;
-          }
-
-          a:hover {
-            background-color: $primary_color;
-            border-radius: 5px;
-          }
-
-          div {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            padding-bottom: 15px;
-            border-radius: 15px;
-            padding: 15px 0;
-
-            span {
-              display: inline-block;
-              white-space: initial;
-              text-align: center;
-              font-size: 0.95rem;
+          font-size: 1.2rem;
+          font-weight: 600;
+          display: block;
+        }
+  
+        a:hover,
+        a:visited {
+          color: #fff;
+        }
+  
+        .dropdown:hover .dropdown-menu {
+          display: block !important;
+        }
+  
+        .dropdown-menu {
+          background-color: $primary3;
+          width: 280px;
+  
+          li {
+            color: #fff;
+  
+            a {
+              display: block;
+              margin: auto;
+              width: 80%;
+              padding: 10px;
+              font-size: 0.9em;
+            }
+  
+            a:hover {
+              background-color: #55A2A4;
+              border-radius: 5px;
+            }
+  
+            div {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: space-between;
+              padding-bottom: 15px;
+              border-radius: 15px;
+              padding: 15px 0;
+  
+              span {
+                display: inline-block;
+                white-space: initial;
+                text-align: center;
+                font-size: 0.95rem;
+              }
+            }
+  
+            div:hover {
+              background-color: #55A2A4;
             }
           }
-
-          div:hover {
-            background-color: $primary_color !important;
+  
+          li:hover {
+            background-color: $primary3;
           }
         }
+      }
 
-        li:hover {
-          background-color: $primary3;
+      .demo-sch {
+        a {
+          background-color: #fff;
+          color: $primary_color;
+          padding: 15px 25px;
+          border-radius: 25px;
+          font-weight: 800;
+          box-shadow: 1px 0 1px rgba(0, 0, 0, 0.4);
         }
-      }
-    }
-
-    .demo-sch {
-      a {
-        background-color: #fff;
-        color: $primary_color;
-        padding: 15px 25px;
-        border-radius: 25px;
-        font-weight: 800;
-        box-shadow: 1px 0 3px rgba(0, 0, 0, 0.4);
-      }
-
-      a:hover,
-      a:visited {
-        color: $primary_color;
-      }
-
-      a:hover {
-        color: #fff;
-        background-color: $primary2;
-        transition: all 0.2s linear;
+  
+        a:hover,
+        a:visited {
+          color: $primary_color;
+        }
+  
+        a:hover {
+          color: #fff;
+          background-color: $primary2;
+          transition: all 0.1s linear;
+        }
       }
     }
   }
